 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Trunk (unreleased changes)

INCOMPATIBLE CHANGES

IMPROVEMENTS

PIG-4763: Insufficient check for the number of arguments in runpigmix.pl (sekikn via rohini)

PIG-4411: Support for vertex level configuration like speculative execution (rohini)

PIG-4775: Better default values for shuffle bytes per reducer (rohini)

PIG-4753: Pigmix should have option to delete outputs after completing the tests (mitdesai via rohini)

PIG-4744: Honor tez.staging-dir setting in tez-site.xml (rohini via daijy)

PIG-4742: Document Pig's Register Artifact Command added in PIG-4417 (akshayrai09 via daijy)

PIG-4417: Pig's register command should support automatic fetching of jars from repo (akshayrai09 via daijy)

PIG-4713: Document Bloom UDF (gliptak via daijy)

PIG-3251: Bzip2TextInputFormat requires double the memory of maximum record size (knoguchi)

PIG-4704: Customizable Error Handling for Storers in Pig (siddhimehta via daijy)

PIG-4717: Update Apache HTTPD LogParser to latest version (nielsbasjes via daijy)

PIG-4468: Pig's jackson version conflicts with that of hadoop 2.6.0 or newer (zjffdu via daijy)

PIG-4708: Upgrade joda-time to 2.8 (rohini)

PIG-4697: Pig needs to serialize only part of the udfcontext for each vertex (rohini)

PIG-4702: Load once for sampling and partitioning in order by for certain LoadFuncs (rohini)

PIG-4699: Print Job stats information in Tez like mapreduce (rohini)

PIG-4554: Compress pig.script before encoding (sandyridgeracer via rohini)

PIG-4670: Embedded Python scripts still parse line by line (rohini)

PIG-4663: HBaseStorage should allow the MaxResultsPerColumnFamily limit to avoid memory or scan timeout issues (pmazak via rohini)
