@@ -24,6 +24,8 @@ INCOMPATIBLE CHANGES
 
 IMPROVEMENTS
 
+PIG-4787: Log JSONLoader exception while parsing records (rohini)
+
 PIG-4763: Insufficient check for the number of arguments in runpigmix.pl (sekikn via rohini)
 
 PIG-4411: Support for vertex level configuration like speculative execution (rohini)
